<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Political Preparedness</string>

    <!-- TODO: Add necessary string values -->

    <!-- COMMON -->
    <string name="upcoming_elections">Upcoming Elections</string>

    <!-- Voter Info Fragment -->
    <string name="election_information">Election Information</string>
    <string name="ballot_information">Ballot Information</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="election_saved">election saved</string>
    <string name="election_deleted">election_deleted</string>

    <!-- Representative Fragment -->
    <string name="representative_search">Representative Search</string>
    <string name="address_line_1">Address Line 1</string>
    <string name="address_line_2">Address Line 2</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="find_my_representative">find my representative</string>
    <string name="use_my_location">use my location</string>
    <string name="my_representatives">My Representatives</string>
    <string name="permission_required">Permissão required</string>
    <string name="settings">settings</string>
    <string name="voting_locations">Voting Locations</string>
    <string name="address_information">Address Information</string>
    <string name="content_description_site">site</string>
    <string name="content_description_facebook">facebook</string>
    <string name="content_description_twitter">twitter</string>

    <!-- Election Fragment -->
    <string name="saved_elections">Saved Elections</string>

    <!-- Launch fragment -->
    <string name="find_my_representatives">find my representatives</string>
</resources>
