<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.election.VoterInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/election_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:padding="@dimen/padding_8"
            android:singleLine="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@{viewModel.selectedElection.name}"
            tools:title="Teste" />

        <TextView
            android:id="@+id/election_date"
            dateString="@{viewModel.selectedElection.electionDay}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_4"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/election_name"
            tools:text="12 November 2055" />

        <TextView
            android:id="@+id/state_header"
            style="@style/TextAppearance.MaterialComponents.Body2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/election_information"
            app:layout_constraintEnd_toEndOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/election_date" />

        <TextView
            android:id="@+id/state_locations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/voting_locations"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_header"
            tools:text="Voting Locations"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/state_ballot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ballot_information"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="@id/state_locations"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_locations"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/address_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="state_correspondence_header,address"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/state_correspondence_header"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/address_information"
            app:layout_constraintEnd_toEndOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_ballot" />

        <TextView
            android:id="@+id/address"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@{viewModel.voterInfoAddress}"
            app:layout_constraintEnd_toEndOf="@id/election_date"
            app:layout_constraintStart_toStartOf="@id/election_date"
            app:layout_constraintTop_toBottomOf="@id/state_correspondence_header" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbt_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_8"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:text="Follow" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>